--- a/sources/HeuristicLab.Hive.Server.Core/3.2/HeuristicLab.Hive.Server.Core-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.Core/3.2/HeuristicLab.Hive.Server.Core-3.2.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.ServiceModel">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -96,7 +97,9 @@
     <Compile Include="ClientCommunicator.cs" />
     <Compile Include="ClientFacade.cs" />
     <Compile Include="ClientManager.cs" />
+    <Compile Include="DaoLocator.cs" />
     <Compile Include="DbTestApp.cs" />
+    <Compile Include="DefaultScheduler.cs" />
     <Compile Include="ExecutionEngineFacade.cs" />
     <Compile Include="Authorization\HivePermissionManager.cs" />
     <Compile Include="HiveServerCorePlugin.cs" />
