--- a/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
@@ -76,7 +76,13 @@
   -->
   <ItemGroup>
     <Compile Include="IClientConfigAdapter.cs" />
+    <Compile Include="IClientConfigDao.cs" />
+    <Compile Include="IClientDao.cs" />
+    <Compile Include="IClientGroupDao.cs" />
+    <Compile Include="IGenericDao.cs" />
+    <Compile Include="IJobDao.cs" />
     <Compile Include="IPluginInfoAdapter.cs" />
+    <Compile Include="IPluginInfoDao.cs" />
     <Compile Include="IProjectAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HiveServerDataAccessPlugin.cs" />
@@ -85,6 +91,7 @@
     <Compile Include="IJobAdapter.cs" />
     <Compile Include="IJobResultsAdapter.cs" />
     <Compile Include="IResourceAdapter.cs" />
+    <Compile Include="VarBinaryStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.DataAccess\3.2\HeuristicLab.DataAccess-3.2.csproj">
@@ -115,6 +122,7 @@ call PreBuildEvent.cmd</PreBuildEvent>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
   </ItemGroup>
 </Project>
