--- a/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationConstants.cs" />
+    <Compile Include="BusinessObjects\AppointmentDto.cs" />
     <Compile Include="BusinessObjects\CachedHivePluginInfoDto.cs" />
     <Compile Include="BusinessObjects\ClientGroupDto.cs" />
     <Compile Include="BusinessObjects\ResourceDto.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="BusinessObjects\UpTimeStatisticsDto.cs" />
     <Compile Include="BusinessObjects\ClientDto.cs" />
     <Compile Include="BusinessObjects\ClientConfigDto.cs" />
+    <Compile Include="RecurrentEvent.cs" />
     <Compile Include="ResponseSerializedJob.cs" />
     <Compile Include="MultiStream.cs" />
     <Compile Include="Interfaces\IClientFacade.cs" />
