--- a/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
@@ -84,6 +84,7 @@
     <Compile Include="IPluginInfoAdapter.cs" />
     <Compile Include="IPluginInfoDao.cs" />
     <Compile Include="IProjectAdapter.cs" />
+    <Compile Include="IUptimeCalendarDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HiveServerDataAccessPlugin.cs" />
     <Compile Include="IClientAdapter.cs" />
