Renamed `PopulationCreator` to `SolutionsCreator` (#911)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3023 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
@@ -81,9 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabOptimizationOperatorsPlugin.cs" />
-    <Compile Include="PopulationCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ChildrenCreator.cs" />
+    <Compile Include="SolutionsCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
