add support for automatic serialization of fields and properties (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3029 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -118,6 +118,9 @@
     <Compile Include="Default\CompositeSerializers\Number2StringSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\NumberEnumerable2StringSerializer.cs" />
     <Compile Include="Default\CompositeSerializers\StackSerializer.cs" />
+    <Compile Include="Default\CompositeSerializers\Storable\StorableReflection.cs" />
+    <Compile Include="Default\CompositeSerializers\Storable\StorableMemberInfo.cs" />
+    <Compile Include="Default\CompositeSerializers\Storable\StorableClassType.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\DataMemberAccessor.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableClassAttribute.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableAttribute.cs" />
