collect all storable caches into storable serializer to reduce prolonged memory usage (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3031 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -121,7 +121,7 @@
     <Compile Include="Default\CompositeSerializers\Storable\StorableReflection.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableMemberInfo.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableClassType.cs" />
-    <Compile Include="Default\CompositeSerializers\Storable\DataMemberAccessor.cs" />
+    <Compile Include="Core\DataMemberAccessor.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableClassAttribute.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableAttribute.cs" />
     <Compile Include="Default\CompositeSerializers\Storable\StorableConstructorAttribute.cs" />
