--- a/sources/HeuristicLab.Encodings.Permutation/3.3/HeuristicLab.Encodings.Permutation-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.Permutation/3.3/HeuristicLab.Encodings.Permutation-3.3.csproj
@@ -95,8 +95,9 @@
     <Compile Include="Interfaces\IPermutationCreator.cs" />
     <Compile Include="Interfaces\IPermutationCrossover.cs" />
     <Compile Include="Interfaces\IPermutationManipulator.cs" />
-    <Compile Include="Interfaces\IPermutationMoveGenerator.cs" />
+    <Compile Include="Interfaces\IPermutationMoveOperator.cs" />
     <Compile Include="Interfaces\IPermutationOperator.cs" />
+    <Compile Include="Interfaces\ITwoOptPermutationMoveOperator.cs" />
     <Compile Include="Manipulators\InsertionManipulator.cs" />
     <Compile Include="Manipulators\InversionManipulator.cs" />
     <Compile Include="Manipulators\ScrambleManipulator.cs" />
@@ -104,25 +105,27 @@
     <Compile Include="Manipulators\Swap3Manipulator.cs" />
     <Compile Include="Manipulators\TranslocationInversionManipulator.cs" />
     <Compile Include="Manipulators\TranslocationManipulator.cs" />
-    <Compile Include="Moves\ExhaustiveTwoOptMoveGenerator.cs">
+    <Compile Include="Moves\TwoOpt\ExhaustiveTwoOptMoveGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Moves\TwoIndexMove.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Moves\TwoOptMove.cs">
+    <Compile Include="Moves\TwoOpt\StochasticTwoOptMoveGenerator.cs" />
+    <Compile Include="Moves\TwoOpt\TwoOptMove.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Moves\TwoOptMoveMaker.cs">
+    <Compile Include="Moves\TwoOpt\TwoOptMoveGenerator.cs" />
+    <Compile Include="Moves\TwoOpt\TwoOptMoveMaker.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Moves\TwoOptMoveTabuAttribute.cs">
+    <Compile Include="Moves\TwoOpt\TwoOptMoveTabuAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Moves\TwoOptMoveTabuEvaluator.cs">
+    <Compile Include="Moves\TwoOpt\TwoOptMoveTabuEvaluator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Moves\TwoOptMoveTabuMaker.cs">
+    <Compile Include="Moves\TwoOpt\TwoOptMoveTabuMaker.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="PermutationManipulator.cs" />
