--- a/sources/HeuristicLab.Encodings.IntegerVectorEncoding/3.3/HeuristicLab.Encodings.IntegerVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.IntegerVectorEncoding/3.3/HeuristicLab.Encodings.IntegerVectorEncoding-3.3.csproj
@@ -78,7 +78,7 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Creators\UniformRandomIntVectorCreator.cs" />
+    <Compile Include="Creators\UniformRandomIntegerVectorCreator.cs" />
     <Compile Include="Crossovers\DiscreteCrossover.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -86,18 +86,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HeuristicLabEncodingsIntegerVectorEncodingPlugin.cs" />
-    <Compile Include="Interfaces\IIntVectorCreator.cs" />
-    <Compile Include="Interfaces\IIntVectorCrossover.cs" />
-    <Compile Include="Interfaces\IIntVectorManipulator.cs" />
-    <Compile Include="Interfaces\IIntVectorOperator.cs" />
-    <Compile Include="IntVectorCrossover.cs" />
-    <Compile Include="IntVectorManipulator.cs" />
+    <Compile Include="Interfaces\IIntegerVectorCreator.cs" />
+    <Compile Include="Interfaces\IIntegerVectorCrossover.cs" />
+    <Compile Include="Interfaces\IIntegerVectorManipulator.cs" />
+    <Compile Include="Interfaces\IIntegerVectorOperator.cs" />
+    <Compile Include="IntegerVectorCrossover.cs" />
+    <Compile Include="IntegerVectorManipulator.cs" />
     <Compile Include="Manipulators\UniformOnePositionManipulator.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="IntegerVector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IntVectorCreator.cs" />
+    <Compile Include="IntegerVectorCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
