Worked on multi-select behavior of list views in deployment server interfaces. #891 (Refactor GUI for plugin management)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3068 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -139,6 +139,12 @@
     <Compile Include="Advanced\InstallationManagerControl.Designer.cs">
       <DependentUpon>InstallationManagerControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Advanced\MultiSelectListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Advanced\MultiSelectListView.Designer.cs">
+      <DependentUpon>MultiSelectListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Advanced\PluginView.cs">
       <SubType>UserControl</SubType>
     </Compile>
