Added deployment service projects to HL 3.3 solution.  #918 (Integrate deployment service into trunk and HL3.3 solution file)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3084 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.Deployment/3.3/App.config
+++ b/sources/HeuristicLab.Services.Deployment/3.3/App.config
@@ -6,7 +6,8 @@
   </system.diagnostics>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-    <add connectionString="Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI" name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString" />
+    <add name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString"
+      connectionString="Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI" />
     <add name="MyLocalSQLServer" connectionString="Initial Catalog=aspnetdb;data source=localhost;Integrated Security=SSPI;" />
   </connectionStrings>
   <system.web>
