Completed main loop of simulated annealing Added a ProbabilisticQualityComparator (derived from QualityComparator) Added an exception in ExponentialDiscreteDoubleValueModifier when startValue, endValue, or both are <= 0. #923
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3094 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Optimization.Operators/3.3/HeuristicLab.Optimization.Operators-3.3.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProbabilisticQualityComparator.cs" />
     <Compile Include="SquareRootDiscreteDoubleValueModifier.cs" />
     <Compile Include="DiscreteDoubleValueModifier.cs" />
     <Compile Include="ExponentialDiscreteDoubleValueModifier.cs" />
