--- a/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
+++ b/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
@@ -103,6 +103,7 @@
     <Compile Include="BoolValue.cs" />
     <Compile Include="Comparison.cs" />
     <Compile Include="ComparisonType.cs" />
+    <Compile Include="PercentValue.cs" />
     <Compile Include="DateTimeValue.cs" />
     <Compile Include="DoubleArray.cs" />
     <Compile Include="DoubleMatrix.cs" />
